--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
     "framer-motion": "^12.0.11",
     "lottie-react": "^2.4.1",
     "next": "15.1.6",
